--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 </head>
 <body>
     <div class="container">
-        
         <header>
             <img src="profile-picture.jpg" alt="profile picture" class="profile-picture">
             <h1>shntaa</h1>
@@ -20,19 +19,19 @@
             <img src="Facebook.png" alt="Facebook" class="Facebook">
         </header>
         <main>
-            <a href="https://link1.com" class="link-button">
+            <a href="https://instagram.com/de_shintt" target="_blank" class="link-button">
                 Instagram
             </a>
-            <a href="https://link2.com" class="link-button">
+            <a href="https://youtube.com/@dewishinta335" target="_blank" class="link-button">
                 YouTube
             </a>
-            <a href="https://link3.com" class="link-button">
+            <a href="https://whatsapp.com/083811846573" target="_blank" class="link-button">
                 WhatsApp
             </a>
-            <a href="https://link4.com" class="link-button">
+            <a href="https://twitter.com/shntaWii" target="_blank" class="link-button">
                 Twitter
             </a>
-            <a href="https://link5.com" class="link-button">
+            <a href="https://facebook.com/DewiShinta" target="_blank" class="link-button">
                 Facebook
             </a>
         </main>
