--- a/index.html
+++ b/index.html
@@ -35,6 +35,13 @@
                 Facebook
             </a>
         </main>
+        <h1 class="Perempuan-Gila"> Perempuan Gila? </h1>
+        <audio id="Linktree-main" src="media.mp3"></audio>
+        <button onclick="playAudio()">Play</button>
+        <button onclick="pauseAudio()">Pause</button>
+
+        <script src="script.js"></script>
+        
         <footer>
             <p>@shntaWii</p>
         </footer>
