--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <audio id="Linktree-main" src="media.mp3"></audio>
         <button onclick="playAudio()">Play</button>
         <button onclick="pauseAudio()">Pause</button>
+        <button onclick="stopMusic()">Stop</button>
 
         <script src="script.js"></script>
         
